cheryls workou issue coding

--- a/style2.css
+++ b/style2.css
@@ -36,42 +36,79 @@ nav {
   /* display: inline-block; */
 }
 
-.nav-menu{
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 60px;
+.nav-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 60px;
 }
 
 .nav-branding {
-    font-size: 2rm;
+  font-size: 2rm;
 }
 
-.nav-link{
-    transition: 0.7s ease;
+.nav-link {
+  transition: 0.7s ease;
 }
 
- .nav-link:hover {
-    color: dodgerblue;
-    cursor: pointer;
- }
+.nav-link:hover {
+  color: dodgerblue;
+  cursor: pointer;
+}
 
- .hamburguer {
-    display: none
-    cursor: pointer:
- }
+.hamburguer {
+  display: none;
+  cursor: pointer;
+}
 
- .bar{
-    display:block;
-    width: 25px;
-    height: 3px;
-    margin: 5px auto;
-   -webkit-transition: all 0.3s ease-in-out;
-   transition: all 0.3s ease-in-out;
-   background-color: white;
+.bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: white;
+}
 
+@media (max-width: 768px) {
+  .hamburguer {
+    display: block;
+  }
 
- }
+  .hamburguer.active .bar:nth-child(2) {
+    transform: translateY(8px) rotate(45deg);
+  }
+  .hamburguer.active .bar:nth-child(1) {
+    transform: translateY(-8px) rotate(-45deg);
+  }
+
+  .hamburguer.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+  }
+
+  .nav-menu {
+    position: fixed;
+    left: -100%;
+    top: 70px;
+    gap: 0;
+    flex-direction: column;
+    background-color: #262626;
+    width: 100%;
+    text-align: center;
+    transition: 0.3s;
+  }
+
+  .nav-item {
+    margin: 16px 0;
+  }
+
+  .nav-menu.active{
+    left: 0;
+    
+  }
+
+}
 
 main h1 {
   /* display: flex; */
@@ -83,8 +120,6 @@ main h1 {
   font-family: "Roboto";
   /* font-size: 50px; */
 }
-
-
 
 .main {
   display: flex;
@@ -127,9 +162,8 @@ footer {
   }
 }
 
-@media(max-width:768px) {
-    .hamburguer{
-        display: block
-    }
+@media (max-width: 768px) {
+  .hamburguer {
+    display: block;
+  }
 }
-
