--- a/style2.css
+++ b/style2.css
@@ -2,6 +2,7 @@
 
 * {
   margin: 5px;
+  padding: 0;
   box-sizing: border-box;
   /* this is a reset. box-sizing : border-box,on an element, padding and border are included in the width and height: */
 }
@@ -19,13 +20,15 @@ body {
   flex-direction: column;
 }
 
+
+
 nav {
   display: flex;
   min-height: 70px;
   padding: 2em 0 2em 0;
   /* from here down added from style.css */
   /* height: 150px; */
-  background: rgba(0, 0, 0, 0.4);
+  background: #262626;
   font-family: "Roboto";
   /* margin: 0 8px; */
   line-height: 50px;
@@ -34,6 +37,15 @@ nav {
   padding: 0 24px;
   /* width: 100%; */
   /* display: inline-block; */
+}
+
+li {
+    list-style: none;
+}
+
+a {
+    color : white;
+    text-decoration: none;
 }
 
 .nav-menu {
@@ -71,16 +83,18 @@ nav {
   background-color: white;
 }
 
-@media (max-width: 768px) {
+@media (max-width:768px) {
   .hamburguer {
     display: block;
   }
 
   .hamburguer.active .bar:nth-child(2) {
-    transform: translateY(8px) rotate(45deg);
+    opacity: 0;
+    /* transform: translateY(8px) rotate(45deg); */
   }
   .hamburguer.active .bar:nth-child(1) {
-    transform: translateY(-8px) rotate(-45deg);
+
+    transform: translateY(8px) rotate(45deg);
   }
 
   .hamburguer.active .bar:nth-child(3) {
@@ -101,14 +115,28 @@ nav {
 
   .nav-item {
     margin: 16px 0;
-  }
+}
 
-  .nav-menu.active{
+.nav-menu.active{
     left: 0;
-    
-  }
+}
 
 }
+
+@media all and (max-width: 550px) {
+  .main {
+    flex-direction: column;
+  }
+  main {
+    padding: 5em 0 5em 0;
+  }
+  a {
+    flex-direction: column;
+  }
+}
+
+
+
 
 main h1 {
   /* display: flex; */
@@ -150,20 +178,5 @@ footer {
   padding: 1em 0 1em 0;
 }
 
-@media all and (max-width: 550px) {
-  .main {
-    flex-direction: column;
-  }
-  main {
-    padding: 5em 0 5em 0;
-  }
-  a {
-    flex-direction: column;
-  }
-}
 
-@media (max-width: 768px) {
-  .hamburguer {
-    display: block;
-  }
-}
+
