--- a/style2.css
+++ b/style2.css
@@ -1,144 +1,84 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:700&display=swap");
 
+/* this is a reset. box-sizing : border-box,on an element, padding and border are included in the width and height: */
 * {
-    box-sizing: border-box;
-    /* this is a reset. box-sizing : border-box,on an element, padding and border are included in the width and height: */
+    margin: 5px;
+    padding: 0%;
+  box-sizing: border-box;
 }
 
 body {
-    margin: 5px;
-    padding: 0;
   display: flex;
-  height: 95vh;
+  height: 750px;
+  
   /* why the height of the main children is changed here ? */
-  background: #345783;
+  /* background: #345783; */
   /* background pic goes here */
-  font-family: sans-serif;
-  text-align: center;
-  color: white;
-  font-size: 24px;
+  /* font-family: sans-serif; */
+  /* text-align: center; */
+  /* color: white; */
   flex-direction: column;
 }
 
-
-
-li {
-    list-style: none;
-}
-
-a {
-    color: white;
-    text-decoration: none;
-}
-
 .navbar {
-    display: flex;
-    min-height: 70px;
-    align-items: center;
-    justify-content: space-between;
-    padding: 2em 0 2em 0;
-    /* from here down added from style.css */
-    /* height: 150px; */
-    font-family: "Roboto";
-    background: #262626;
-    /* margin: 0 8px; */
-  line-height: 50px;
-  padding: 0 24px;
-  /* width: 100%; */
-  /* display: inline-block; */
-}
-
-.nav-menu {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 60px;
+  background: #262626;
+  color: white;
 }
 
-.nav-branding {
-  font-size: 2rem;
-  margin: .5rem;
-
+.brand-title {
+  font-size: 3.5rem;
+  margin: 0.5rem;
+}
+/* container of the li , have to set parent first */
+.navbar-links ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
 }
 
-.nav-link {
-  transition: 0.7s ease;
+.navbar-links li {
+  list-style: none;
 }
 
-.nav-link:hover {
-  color: dodgerblue;
-  cursor: pointer;
-}
-
-.hamburguer {
-  display: none;
-  cursor: pointer;
-}
-
-.bar {
+.navbar-links li a {
+  text-decoration: none;
+  color: white;
+  padding: 1rem;
   display: block;
-  width: 25px;
+}
+
+.navbar-links li:hover {
+  background-color: darkgrey;
+}
+
+.toggle-button {
+  position: absolute;
+  top: 2rem;
+  right: 1.5rem;
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 21px;
+}
+
+.toggle-button .bar {
   height: 3px;
-  margin: 5px auto;
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
+  width: 100%;
   background-color: white;
-}
-
-@media (max-width: 768px) {
-  .hamburguer {
-    display: block;
-  }
-
-  .hamburguer.active .bar:nth-child(2) {
-    opacity: 0;
-  }
-  .hamburguer.active .bar:nth-child(1) {
-    transform: translateY(8px) rotate(45deg);
-  }
-
-  .hamburguer.active .bar:nth-child(3) {
-    transform: translateY(-8px) rotate(-45deg);
-  }
-
-  .nav-menu {
-    position: fixed;
-    left: -100%;
-    top: 70px;
-    gap: 0;
-    flex-direction: column;
-    background-color: #262626;
-    width: 100%;
-    text-align: center;
-    transition: 0.3s;
-  }
-
-  .nav-item {
-    margin: 16px 0;
-  }
-
-  .nav-menu.active {
-    left: 0;
-  }
-}
-
-@media(max-width: 768px) {
-  .main {
-    flex-direction: column;
-  }
-  main {
-    padding: 5em 0 5em 0;
-  }
-  
+  border-radius: 10px;
 }
 
 main h1 {
- 
-  font-family: "Roboto";
-  
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
-.main {
+.main-div {
+    
+  height: 50%;
   display: flex;
   flex: 1;
 }
@@ -153,7 +93,7 @@ main {
   display: flex;
   background: #982459;
   padding: 3em 0 3em 0;
-  flex: 5 5 150px;
+  flex: 5 5 150px; 
 }
 
 .right {
@@ -163,6 +103,41 @@ main {
 }
 
 footer {
+  position: fixed;
+  width: 100%;
   background: chocolate;
+  bottom: 0%;
+  left: 0;
   padding: 1em 0 1em 0;
+}
+
+@media (max-width: 400px) {
+  .toggle-button {
+    display: flex;
+  }
+  .navbar-links {
+    width: 100%;
+    display: none;
+  }
+
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .navbar-links ul {
+    width: 100%;
+    flex-direction: column;
+  }
+  .navbar-links li {
+    text-align: center;
+  }
+
+  .navbar li a {
+    padding: 0.5rem 1rem;
+  }
+
+  .navbar-links.active {
+    display: flex;
+  }
 }
