--- a/style2.css
+++ b/style2.css
@@ -2,14 +2,21 @@
 
 /* this is a reset. box-sizing : border-box,on an element, padding and border are included in the width and height: */
 * {
-    margin: 5px;
-    padding: 0%;
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
+html, body {
+    height: 100%;
+}
 body {
-  display: flex;
-  height: 750px;
+    margin: 0%;
+    padding: 0%;
+    display: flex;
+    
+    background-image: url(./assets/pylyp-sukhenko-ibh9J-fIgZU-unsplash.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+  /* height: 850px; */
   
   /* why the height of the main children is changed here ? */
   /* background: #345783; */
@@ -73,31 +80,62 @@ body {
 }
 
 main h1 {
+    color: antiquewhite;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .main-div {
     
-  height: 50%;
+ 
   display: flex;
   flex: 1;
 }
+ 
+.row {
+    /* display: flex; */
+    /* flex-direction: column; */
+   /* text-align: center; */
+   
+    color:  red;
+}
+
+.card {
+  width: 200px;
+}
 
 .left {
-  background: #178761;
+    border: pink solid 3px;
   padding: 3em 0 3em 0;
   flex: 1 1 100px;
 }
 
+.left h1 {
+    color: aqua;
+}
+
 main {
-  display: flex;
-  background: #982459;
+  display: column;
+  /* justify-content: start; */
+  text-align: center;
+  
+  border: #178761 solid;
   padding: 3em 0 3em 0;
   flex: 5 5 150px; 
 }
 
+main ul li {
+    list-style: none;
+    
+}
+
+main li a {
+    color: red;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 .right {
-  background: #654816;
+ border: orange solid 3px;
   padding: 3em 0 3em 0;
   flex: 1 1 100px;
 }
@@ -105,7 +143,7 @@ main {
 footer {
   position: fixed;
   width: 100%;
-  background: chocolate;
+  background: #262626;
   bottom: 0%;
   left: 0;
   padding: 1em 0 1em 0;
